--- a/back/package.json
+++ b/back/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "@tinkoff/invest-openapi-js-sdk": "^1.2.15",
+    "bluebird": "^3.7.2",
     "mongoose": "^5.9.21",
-    "puppeteer": "^5.0.0"
+    "mongoose-double": "0.0.1",
+    "puppeteer": "^5.0.0",
+    "shortid": "^2.2.15",
+    "wait-port": "^0.2.9"
   }
 }
