--- a/src/package.json
+++ b/src/package.json
@@ -4,6 +4,7 @@
   "description": "Oblivion backend",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "parse": "node parse.js"
   },
   "author": "VVM",
